# dead_poet

./: .gitignore  Dockerfile  README.md  dead-poet.cabal  docker-compose.yml
app/: Main.hs
nixos/: docker-compose.nix  import-docker-compose.sh
