cabal-version: 2.4
name: dead-poet
version: 0.1.0.0
build-type: Simple

executable dead-poet-server
  main-is: Main.hs
  hs-source-dirs: app
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
      base >=4.16 && <4.20
    , aeson
    , bytestring
    , containers
    , text
    , time
    , stm
    , wai
    , wai-extra
    , warp
    , scotty
